fixed posts gap/margin

--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ nav a:hover {
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  margin-inline: 20px;
 }
 
 .forum article {
@@ -156,7 +157,6 @@ nav a:hover {
   flex-direction: column;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  width: 90%;
 }
 
 .forum img {
@@ -261,6 +261,7 @@ nav a:hover {
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
+    gap: 24px;
     margin-inline: 24px;
   }
 
@@ -336,6 +337,7 @@ nav a:hover {
   }
 
   .forum .posts {
+    gap: 45px;
     margin-inline: 50px;
   }
 
